--- a/public/index.css
+++ b/public/index.css
@@ -611,18 +611,16 @@ video {
 
 .h-screen {
   height: 100vh;
+  height: 100dvh;
 }
 
 .min-h-screen {
   min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .w-12 {
   width: 3rem;
-}
-
-.w-2\/3 {
-  width: 66.666667%;
 }
 
 .w-20 {
@@ -631,6 +629,10 @@ video {
 
 .w-40 {
   width: 10rem;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
 }
 
 .w-80 {
@@ -643,22 +645,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-5\/6 {
-  width: 83.333333%;
-}
-
-.max-w-48 {
-  max-width: 12rem;
-}
-
-.max-w-96 {
-  max-width: 24rem;
 }
 
 .max-w-\[36rem\] {
